--- a/Android/088-Android-Performance-Patterns/1501130355-why-60fps.md
+++ b/Android/088-Android-Performance-Patterns/1501130355-why-60fps.md
@@ -1,6 +1,6 @@
 ## Android Performance Patterns: Why 60fps?
 
-![video_screenshot](images/lboyR-A1woU.jpg)
+![video_screenshot](images/CaMTIgxCSqU.jpg)
 
 ** 视频发布时间**
  
