--- a/Android/031-Game-On/1503060393-pie-noon.md
+++ b/Android/031-Game-On/1503060393-pie-noon.md
@@ -8,7 +8,18 @@
 
 ** 视频介绍**
 
-> "Why did Google create a game about Pie Throwing? Find out how the team behind Pie Noon used WebP, MathFu, and FlatBuffers to buildtheirlatestAndroidgame.WantmoreinformationaboutanyofthesetopicsPieNoon:http://google.github.io/pienoon/WebP:https://developers.google.com/speed/w...MathFu:http://google.github.io/mathfu/FlatBuffers:http://google.github.io/flatbuffers/Otherutilities:http://google.github.io/fplutil/FindmoreGameOn!videoshere:https://www.youtube.com/playlist?list...
+> "Why did Google create a game about Pie Throwing? Find out how the team behind Pie Noon used WebP, MathFu, and FlatBuffers to buildtheirlatestAndroidgame. 
+
+> Pie Noon: http://google.github.io/pienoon/ 
+
+> WebP: https://developers.google.com/speed/webp/ 
+
+> MathFu: http://google.github.io/mathfu/ 
+
+> FlatBuffers: http://google.github.io/flatbuffers/ 
+
+> Other utilities: http://google.github.io/fplutil/ 
+ 
 
 ** 视频推介语 **
 
