--- a/Android/031-Game-On/1503060393-pie-noon.md
+++ b/Android/031-Game-On/1503060393-pie-noon.md
@@ -1,6 +1,6 @@
 ## Game On! - Pie Noon
 
-![video_screenshot](images/0bqsCoOrlHY.jpg)
+![video_screenshot](images/CJbmJ1W5wys.jpg)
 
 ** 视频发布时间**
  
